# epub_fixer

./: README.md  fix.py  pyproject.toml
.github/workflows/: python-app.yml
src/epub_fixer/: __main__.py  test_cli.py  via_java.py
src/epub_fixer/__snapshots__/: test_cli.ambr
