[project]
name = "epub_fixer"
version = "0.1.0"
description = "Makes OEBPS files into valid EPUB files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ebooklib>=0.18",
    "epubcheck>=5.1.0",
    "rich>=13.9.4",
    "jpype1>=1.5.1",
    "rich-click>=1.8.5",
]

[project.scripts]
epub_fixer = "epub_fixer.__main__:epub_fixer"

[dependency-groups]
dev = [
    "pdbpp>=0.10.3",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "syrupy>=4.8.0",
]

[tool.ruff.lint]
select = ["I", "E", "F"]

[tool.uv]
package = true

[tool.uv.sources]
ebooklib = { git = "https://github.com/aerkalov/ebooklib" }
